--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,6 +24,11 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+MYAPP_RELEASE_STORE_FILE=voces.keystore
+MYAPP_RELEASE_KEY_ALIAS=voces
+MYAPP_RELEASE_STORE_PASSWORD=Dofus159
+MYAPP_RELEASE_KEY_PASSWORD=Dofus159
+
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.125.0
 
