--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.0.3",
+    "@react-native-google-signin/google-signin": "^8.2.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^0.27.2",
@@ -17,6 +19,8 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dropdown-picker": "^5.4.3",
+    "react-native-fbsdk-next": "^11.1.0",
+    "react-native-image-picker": "^4.10.1",
     "react-native-keychain": "^8.1.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
