--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
     android:allowBackup="false"
     android:theme="@style/AppTheme"
   >
+  <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyDoWTa7BXAOv1OH-dlUullqdhDahGUUPss"/>
     <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id" />
     <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token" />
     <activity
