--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-fbsdk-next": "^11.1.0",
     "react-native-image-picker": "^4.10.1",
     "react-native-keychain": "^8.1.1",
+    "react-native-maps": "^1.3.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.6.0",
