--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/geolocation": "^3.0.3",
     "@react-native-google-signin/google-signin": "^8.2.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -20,6 +19,8 @@
     "react-native": "0.70.5",
     "react-native-dropdown-picker": "^5.4.3",
     "react-native-fbsdk-next": "^11.1.0",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-picker": "^4.10.1",
     "react-native-keychain": "^8.1.1",
     "react-native-maps": "^1.3.2",
