--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dropdown-picker": "^5.4.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fbsdk-next": "^11.1.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.1",
