--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^0.27.2",
     "axios-auth-refresh": "^3.3.4",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dropdown-picker": "^5.4.3",
