--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-controlled-mentions": "^2.2.5",
     "react-native-dropdown-picker": "^5.4.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-fbsdk-next": "^11.1.0",
