--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-maps": "^1.3.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-share": "^8.0.1",
     "react-native-svg": "^13.6.0",
     "react-native-vector-icons": "^9.2.0"
   },
