--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-image-picker": "^4.10.1",
     "react-native-keychain": "^8.1.1",
     "react-native-maps": "^1.3.2",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-share": "^8.0.1",
