--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^0.27.2",
     "axios-auth-refresh": "^3.3.4",
+    "deprecated-react-native-prop-types": "^4.0.0",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
@@ -25,12 +26,14 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-picker": "^4.10.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^8.1.1",
     "react-native-maps": "^1.3.2",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-share": "^8.0.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.6.0",
     "react-native-vector-icons": "^9.2.0"
   },
