--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
   <queries>
+    <package android:name="com.whatsapp" />
+    <package android:name="com.whatsapp.android" />
+    <package android:name="com.twitter" />
+    <package android:name="com.twitter.android" />
     <intent>
       <action android:name="android.intent.action.VIEW" />
       <data android:scheme="http" /> <!-- for browser -->
